init .gitignore ko push

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-./QuanLyThuVienHVKTQS/App.config
+./packages
+ ./.vs
+ ./QuanLyThuVienHVKTQS/.vs
+ ./QuanLyThuVienHVKTQS/bin
+ ./QuanLyThuVienHVKTQS/App.config 
